app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  selector:
    matchLabels:
      app: user-service
  replicas: 1 
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: user-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8101
